added contact and pricies section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Document</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="favicon.ico"/>
+	<link rel="stylesheet" href="assets/font-awesome-4.7.0/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto:500" rel="stylesheet">
 	<link rel="stylesheet" href="assets/main.css/normalize.css">
 	<link rel="stylesheet" href="assets/main.css/main.css">
@@ -116,35 +117,178 @@
 			</div>
 		</div>
 	</section>
+	<section id="price_d">
+		<div class="wrapper">
+			<div class="col-m">
+				<table class="color-1">
+					<caption>Глянцевые / Китай</caption>
+					<tr>
+						<th>Лак белый BLUE CRYSTAL 320см</th>
+						<td>360тг</td>
+					</tr>
+					<tr>
+						<th>Лак белый DIAMOND 320см</th>
+						<td>420тг</td>
+					</tr>
+					<tr>
+						<th>Лак белый 360см</th>
+						<td>400тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 320см(114,307,347,501,507,511)</th>
+						<td>530тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 320см(94 цвета)</th>
+						<td>590тг</td>
+					</tr>
+					<tr>
+						<th>Лак белый 500см</th>
+						<td>595тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 500см(114,307,347,501,507,511)</th>
+						<td>760тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 500см(100,110,225,305,313,400,402,404,406,462,478,<span>501,507,511,525,555,571,577,604,608,644,652,721<span>)</th>
+						<td>890тг</td>
+					</tr>
+				</table>
+				<table class="color-2">
+					<caption>Глянцевые / Китай</caption>
+					<tr>
+						<th>Лак белый BLUE CRYSTAL 320см</th>
+						<td>360тг</td>
+					</tr>
+					<tr>
+						<th>Лак белый DIAMOND 320см</th>
+						<td>420тг</td>
+					</tr>
+					<tr>
+						<th>Лак белый 360см</th>
+						<td>400тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 320см(114,307,347,501,507,511)</th>
+						<td>530тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 320см(94 цвета)</th>
+						<td>590тг</td>
+					</tr>
+					<tr>
+						<th>Лак белый 500см</th>
+						<td>595тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 500см(114,307,347,501,507,511)</th>
+						<td>760тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 500см(100,110,225,305,313,400,402,404,406,462,478,<span>501,507,511,525,555,571,577,604,608,644,652,721<span>)</th>
+						<td>890тг</td>
+					</tr>
+				</table>
+			</div>
+				<div class="col-l">
+				<table class="color-3">
+					<caption>Глянцевые / Китай</caption>
+					<tr>
+						<th>Лак белый BLUE CRYSTAL 320см</th>
+						<td>360тг</td>
+					</tr>
+					<tr>
+						<th>Лак белый DIAMOND 320см</th>
+						<td>420тг</td>
+					</tr>
+					<tr>
+						<th>Лак белый 360см</th>
+						<td>400тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 320см(114,307,347,501,507,511)</th>
+						<td>530тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 320см(94 цвета)</th>
+						<td>590тг</td>
+					</tr>
+					<tr>
+						<th>Лак белый 500см</th>
+						<td>595тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 500см(114,307,347,501,507,511)</th>
+						<td>760тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 500см(100,110,225,305,313,400,402,404,406,462,478,<span>501,507,511,525,555,571,577,604,608,644,652,721<span>)</th>
+						<td>890тг</td>
+					</tr>
+					<tr>
+						<th>Лак белый BLUE CRYSTAL 320см</th>
+						<td>360тг</td>
+					</tr>
+					<tr>
+						<th>Лак белый DIAMOND 320см</th>
+						<td>420тг</td>
+					</tr>
+					<tr>
+						<th>Лак белый 360см</th>
+						<td>400тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 320см(114,307,347,501,507,511)</th>
+						<td>530тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 320см(94 цвета)</th>
+						<td>590тг</td>
+					</tr>
+					<tr>
+						<th>Лак белый 500см</th>
+						<td>595тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 500см(114,307,347,501,507,511)</th>
+						<td>760тг</td>
+					</tr>
+					<tr>
+						<th>Лак цветной 500см(100,110,225,305,313,400,402,404,406,462,478,<span>501,507,511,525,555,571,577,604,608,644,652,721<span>)</th>
+						<td>890тг</td>
+					</tr>
+				</table>
+			</div>
+		</div>
+	</section>
 	<section id="contact">
 		<div class="wrapper">
-			<form class="form" action="" method="post">
-				<div class="form-group">
-					<div class="field">
-						<label for="name">Name</label>
-						<input type="text" name="name" value="" class="form-control data">
-					</div>
-					<div class="field">
-						<label for="email">Email</label>
-						<input type="text" name="email" value="" class="form-control data">
-					</div>
-					<div class="field">
-						<label for="message">Message</label>
-						<textarea name="message" id="message" class="form-control letter"></textarea>
-					</div>
-				<br>
-				<button type="submit" name="submit" class="btn">Отправить</button>
+			<div class="info">
+				<ul>
+					<li><i class="fa fa-map-marker" aria-hidden="true"></i><p>г.Кокшетау Ауэзова 213</p></li>
+					<li><i class="fa fa-mobile" aria-hidden="true"></i><p>+7 771 006 1014</p></li>
+					<li><i class="fa fa-envelope" aria-hidden="true"></i><p>kokshetau@okvk.kz</p></li>
+				</ul>
 			</div>
+			<form class="form" action="" method="post">
+					<div class="form-group">
+						<div class="field">
+							<label for="name">Имя</label>
+							<input type="text" name="name" value="" class="form-control mywidth">
+						</div>
+						<div class="field">
+							<label for="email">Почта</label>
+							<input type="text" name="email" value="" class="form-control mywidth">
+						</div>
+						<div class="field">
+							<label for="message">Сообщение</label>
+							<textarea name="message" id="message" class="form-control mywidth"></textarea>
+						</div>
+					<button type="submit" name="submit" class="btn">Отправить</button>
+				</div>
 			</form>
 		</div>
 	</section>
-	<script type="text/javascript">
-	window.onload=function(){
-		var elem = document.getElementsByClassName('form-group');
-		elem.style.width = 30 + "%";
-		var area = document.getElementById('message');
-		area.style.width = 30 + "%";
-	}
-	</script>
 </body>
 </html>
