--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
 			</div>
 			<div class="text">
 				<h3>Немного о <span>нас</span></h3>
-				<p>Мы находимся на рынке более пяти лет. Имеем большой опыт монтажа
+				<p>Мы находимся на рынке более пяти лет. Имеем большой опыт изготовления
 				самых сложных натяжных потолков. Главное для нас это качество и скорость.
-				Мы всегда работаем на результат. Замер монтаж и выезд на место, всё это входит
-				в стоимость натяжного потолка.
+				Мы всегда работаем на результат. 
 				Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом ножки беспомощно копошились у него перед глазами. «Что со мной случилось?» – подумал он. Это не было сном. Его комната, настоящая, разве что слишком маленькая, но обычная комната, мирно покоилась в своих четырех хорошо знакомых стенах. Над столом, где были разложены распакованные образцы сукон – Замза был коммивояжером, – висел портрет, который он недавно вырезал из иллюстрированного журнала и вставил в красивую золоченую рамку. На портрете была изображена дама в меховой шляпе и боа, она сидела очень прямо и протягивала зрителю тяжелую меховую муфту, в которой
 			</div>
 		</div>
@@ -94,25 +93,19 @@
 			<div class="sup">
 				<img src="images/smith.png" alt="иваныч">
 				<h4>Иван Иваныч</h4>
-				<p>Это просто сука нах. Слов нет я ваще в шоке как так. Натянули по полной
-				Кароч я ваще рекомендую по полной всем кто хочет чтобы ему натянул натяжные потолки
-				по полной.
+				<p>Это пожалуй самая лучшая фирма занимающаяся изготовлением натяжных потолков. Всегда есть большой выбор комплектующих и материалов. Рекомендую.
 				</p>
 			</div>
 			<div class="sup">
 				<img src="images/smith.png" alt="иваныч">
 				<h4>Иван Иваныч</h4>
-				<p>Это просто сука нах. Слов нет я ваще в шоке как так. Натянули по полной
-				Кароч я ваще рекомендую по полной всем кто хочет чтобы ему натянул натяжные потолки
-				по полной.
+				<p>Это пожалуй самая лучшая фирма занимающаяся изготовлением натяжных потолков. Всегда есть большой выбор комплектующих и материалов. Рекомендую.
 				</p>
 			</div>
 			<div class="sup">
 				<img src="images/smith.png" alt="иваныч">
 				<h4>Иван Иваныч</h4>
-				<p>Это просто сука нах. Слов нет я ваще в шоке как так. Натянули по полной
-				Кароч я ваще рекомендую по полной всем кто хочет чтобы ему натянул натяжные потолки
-				по полной.
+				<p>Это пожалуй самая лучшая фирма занимающаяся изготовлением натяжных потолков. Всегда есть большой выбор комплектующих и материалов. Рекомендую.
 				</p>
 			</div>
 		</div>
