added smoothe scroll and started building new price page

--- a/index.html
+++ b/index.html
@@ -10,22 +10,24 @@
 	<link rel="stylesheet" href="assets/main.css/normalize.css">
 	<link rel="stylesheet" href="assets/main.css/main.css">
 </head>
+<script
+  src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"> </script>
 <body>
-	<div id="menu">
+	<section id="menu">
 		<div class="wrapper">
 			<nav class="main">
 				<div class="logo">
 					<h1>kvk<span>Kokshetau</span></h1>
 				</div>
-					<ul class="navigation">
-						<li><a href="#contac">Контакты</a></li>
-						<li><a href="#price">Цены</a></li>
-						<li><a href="#about">О нас</a></li>
-						<li><a href="#reviews">Отзывы</a></li>
-					</ul>
+				<ul class="navigation">
+					<li class="nav-item"><a class="nav-link scroll" href="#showcase">Контакты</a></li>
+					<li class="nav-item"><a class="nav-link scroll" href="#reviews">Цены</a></li>
+					<li class="nav-item"><a class="nav-link scroll" href="#price_d">О нас</a></li>
+					<li class="nav-item"><a class="nav-link scroll" href="#contact">Отзывы</a></li>
+				</ul>
 			</nav>
 		</div>
-	</div>
+	</section>
 	<section id="showcase">
 		<div class="wrapper">
 			<div class="showcase">
@@ -46,7 +48,7 @@
 				<h3>Немного о <span>нас</span></h3>
 				<p>Мы находимся на рынке более пяти лет. Имеем большой опыт изготовления
 				самых сложных натяжных потолков. Главное для нас это качество и скорость.
-				Мы всегда работаем на результат. 
+				Мы всегда работаем на результат.
 				Проснувшись однажды утром после беспокойного сна, Грегор Замза обнаружил, что он у себя в постели превратился в страшное насекомое. Лежа на панцирнотвердой спине, он видел, стоило ему приподнять голову, свой коричневый, выпуклый, разделенный дугообразными чешуйками живот, на верхушке которого еле держалось готовое вот-вот окончательно сползти одеяло. Его многочисленные, убого тонкие по сравнению с остальным телом ножки беспомощно копошились у него перед глазами. «Что со мной случилось?» – подумал он. Это не было сном. Его комната, настоящая, разве что слишком маленькая, но обычная комната, мирно покоилась в своих четырех хорошо знакомых стенах. Над столом, где были разложены распакованные образцы сукон – Замза был коммивояжером, – висел портрет, который он недавно вырезал из иллюстрированного журнала и вставил в красивую золоченую рамку. На портрете была изображена дама в меховой шляпе и боа, она сидела очень прямо и протягивала зрителю тяжелую меховую муфту, в которой
 			</div>
 		</div>
@@ -283,5 +285,8 @@
 			</form>
 		</div>
 	</section>
+	<script type="text/javascript" src="assets/js/main.js">
+
+	</script>
 </body>
 </html>
